fix the positioning of the footer on mobile

--- a/style.css
+++ b/style.css
@@ -17,10 +17,16 @@
 body {
     font-size: 1.5rem;
     font-family: var(--body-font);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 6.4rem;
 }
 main {
     max-width: 62.6rem;
-    margin:6.4rem auto;
+    padding-top: 6.4rem;
 }
 .container {
    display: flex;
@@ -50,17 +56,15 @@ h1 span {
     margin-bottom: 3.2rem;
 }
 footer {
-    position: absolute;
     width: 100%;
-    bottom: 0;
 }
 footer ul {
-    margin: 1.6rem auto 4rem;
     list-style: none;
     display: flex;
     justify-content: center;
     gap: 4.2rem;
     font-weight: 700;
+    padding: 1.6rem 0 4rem;
 }
 footer ul li a {
     color: var(--brand-color);
